--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,9 @@
 CXX      = g++
-CPPFLAGS = -std=c++11 -Wall
+CPPFLAGS = -std=c++14 -Wall
 
-DIR      = core light material math object utility
-OBJECTS  = core/light.o core/material.o core/object.o core/ray_tracer.o core/sampler.o core/scene.o \
+DIR      = accelerator core light material math object utility
+OBJECTS  = accelerator/AABB_tree.o accelerator/AABB.o \
+		   core/light.o core/material.o core/object.o core/ray_tracer.o core/sampler.o core/scene.o \
 		   light/distant_light.o light/point_light.o \
 		   material/diffuse.o material/glass.o material/glossy.o material/mirror.o \
 		   math/matrix.o math/point.o math/ray.o math/utility.o math/vector.o \
@@ -10,7 +11,7 @@ OBJECTS  = core/light.o core/material.o core/object.o core/ray_tracer.o core/sam
 		   utility/hit_record.o
 
 RayTracer: $(OBJECTS) main/main.cpp
-	$(CXX) $(CPPFLAGS) -o RayTracer $(OBJECTS) main/main.cpp
+	$(CXX)  $(CPPFLAGS)  -o RayTracer $(OBJECTS) main/main.cpp
 
 clean:
 	for dir in $(DIR); do \
