添加了线程池

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,10 +9,10 @@ OBJECTS  = accelerator/AABB_tree.o accelerator/AABB.o \
 		   math/matrix.o math/point.o math/ray.o math/utility.o math/vector.o \
 		   object/plane.o object/sphere.o object/triangle_mesh.o object/triangle.o \
 		   sampler/uniform_sampler.o \
-		   utility/hit_record.o
+		   utility/hit_record.o utility/thread_pool.o
 
 RayTracer: $(OBJECTS) main/main.cpp
-	$(CXX)  $(CPPFLAGS)  -o RayTracer $(OBJECTS) main/main.cpp
+	$(CXX)  $(CPPFLAGS)  -o RayTracer $(OBJECTS) main/main.cpp -lpthread
 
 clean:
 	for dir in $(DIR); do \
